objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Formation continue courte</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Inscrit</fullName>
        </values>
        <values>
            <fullName>Intéressé par</fullName>
        </values>
        <values>
            <fullName>Prescription Transformée</fullName>
        </values>
        <values>
            <fullName>Prospect chaud</fullName>
        </values>
        <values>
            <fullName>Prospect probable</fullName>
        </values>
        <values>
            <fullName>Prospect qualifié</fullName>
        </values>
        <values>
            <fullName>Prospect report</fullName>
        </values>
        <values>
            <fullName>Pré inscrit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Formation initiale</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A %28ré%29orienter</fullName>
        </values>
        <values>
            <fullName>Admis</fullName>
        </values>
        <values>
            <fullName>Candidat</fullName>
        </values>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Compte doublon</fullName>
        </values>
        <values>
            <fullName>Envoyé Prestataire</fullName>
        </values>
        <values>
            <fullName>Inscrit</fullName>
        </values>
        <values>
            <fullName>Intéressé par</fullName>
        </values>
        <values>
            <fullName>Intérêt Supplémentaire</fullName>
        </values>
        <values>
            <fullName>Non actif</fullName>
        </values>
        <values>
            <fullName>Prescription Transformée</fullName>
        </values>
        <values>
            <fullName>Prospect chaud</fullName>
        </values>
        <values>
            <fullName>Prospect probable</fullName>
        </values>
        <values>
            <fullName>Prospect qualifié</fullName>
        </values>
        <values>
            <fullName>Prospect report</fullName>
        </values>
        <values>
            <fullName>Pré inscrit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fundraising</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Abandon</fullName>
        </values>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Conclu</fullName>
        </values>
        <values>
            <fullName>Contacté</fullName>
        </values>
        <values>
            <fullName>Identifié</fullName>
        </values>
        <values>
            <fullName>Intéressé</fullName>
        </values>
        <values>
            <fullName>Promesse</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Intra</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accord de principe</fullName>
        </values>
        <values>
            <fullName>Besoin identifié</fullName>
        </values>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Contrat signé</fullName>
        </values>
        <values>
            <fullName>Négociation avancée</fullName>
        </values>
        <values>
            <fullName>Offre en rédaction</fullName>
        </values>
        <values>
            <fullName>Offre envoyée</fullName>
        </values>
        <values>
            <fullName>Offre validée</fullName>
        </values>
        <values>
            <fullName>Offre à valider</fullName>
        </values>
        <values>
            <fullName>Short list</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Programme  Long Diplômant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A %28ré%29orienter</fullName>
        </values>
        <values>
            <fullName>Admis</fullName>
        </values>
        <values>
            <fullName>Candidat</fullName>
        </values>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Intégré</fullName>
        </values>
        <values>
            <fullName>Intéressé par</fullName>
        </values>
        <values>
            <fullName>Intérêt Supplémentaire</fullName>
        </values>
        <values>
            <fullName>Non actif</fullName>
        </values>
        <values>
            <fullName>Prescription Transformée</fullName>
        </values>
        <values>
            <fullName>Prospect chaud</fullName>
        </values>
        <values>
            <fullName>Prospect probable</fullName>
        </values>
        <values>
            <fullName>Prospect qualifié</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Relations Employeur</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Inscrit</fullName>
        </values>
        <values>
            <fullName>Intéressé par</fullName>
        </values>
        <values>
            <fullName>Prospect chaud</fullName>
        </values>
        <values>
            <fullName>Prospect qualifié</fullName>
        </values>
        <values>
            <fullName>Pré inscrit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Taxe</fullName>
        <description>Taxe d&apos;apprentissage</description>
        <isActive>true</isActive>
        <values>
            <fullName>Clos %28Perdu%29</fullName>
        </values>
        <values>
            <fullName>Conclu</fullName>
        </values>
        <values>
            <fullName>Promesse</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Sollicité</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_d_sactiv_son_int_r_t__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A désactivé son intérêt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_ete_approuve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A été approuvé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_ete_remercie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A été remercié</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_t_l_charg_la_plaquette__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A téléchargé la plaquette</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TEXT (Contact_central__r.Age__c)</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ann_e_du_dipl_me__c</fullName>
        <formula>Contact_central__r.Ann_e_du_dipl_me__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Année du diplôme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anne_validite__c</fullName>
        <formula>TEXT( Account.Annee_validite__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Année de validité</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversaire_date_du_don__c</fullName>
        <formula>AND( 
TODAY()&gt;=(DATE(YEAR(TODAY()),MONTH(Date_du_don__c),DAY(Date_du_don__c))-30), 
TODAY()&lt;=DATE(YEAR(TODAY()),MONTH(Date_du_don__c),DAY(Date_du_don__c)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversaire date du don</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Définit le reponsable logistique</description>
        <label>BPC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunit_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Besoin_VAP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si cochée, l&apos;opportunité nécessite une VAP.</inlineHelpText>
        <label>Besoin VAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CASESAFEID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CASESAFEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Projet__c</fullName>
        <description>CA projeté</description>
        <formula>Amount *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CA de l&apos;opportunité x % de probabilité</inlineHelpText>
        <label>CA Projeté</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_attendu__c</fullName>
        <label>CA attendu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_pour_cumul_Intra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case pour cumul Intra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Agresso_Opportunit__c</fullName>
        <description>Ce champ est remplit automatiquement en se basant sur &quot; RecordType + Exercice + Compteur Opp&quot;</description>
        <label>Code Agresso Opportunité</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Produit__c</fullName>
        <label>Code Produit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire_devis__c</fullName>
        <label>Commentaire devis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compteur_OPP__c</fullName>
        <description>Compteur opportunité</description>
        <displayFormat>{000000}</displayFormat>
        <label>Compteur OPP</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Conditions_de_restauration__c</fullName>
        <label>Conditions de restauration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Les frais de restauration sont inclus</fullName>
                </value>
                <value>
                    <fullName>Les frais de restauration sont en sus 16€H.T. par personne et par jour (TVA 10%)</fullName>
                </value>
                <value>
                    <fullName>Les frais de restauration sont en sus 30€H.T. par personne et par jour (TVA 10%)</fullName>
                </value>
                <value>
                    <fullName>Les frais de restauration sont offerts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Canal_d_acquisition__c</fullName>
        <formula>TEXT(Contact_central__r.Nature_du_premier_contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact : Canal d&apos;acquisition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_D_tail_canal_d_acquisition__c</fullName>
        <formula>Contact_central__r.D_tail_canal_d_acquisition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact : Détail canal d&apos;acquisition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Dernier_Dipl_me_ou_en_cours__c</fullName>
        <formula>Contact_central__r.Dernier_dipl_me_ou_en_cours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact : Dernier Diplôme (ou en cours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Etablissement__c</fullName>
        <formula>Contact_central__r.Etablissement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact : Etablissement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_IINTRA_non_repris__c</fullName>
        <label>Contact IINTRA non repris</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Pays_de_R_sidence__c</fullName>
        <formula>Contact_central__r.Pays__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact : Pays de Résidence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_central__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact central</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunités</relationshipLabel>
        <relationshipName>Opportunites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat_cadre__c</fullName>
        <formula>Account.Contrat_cadre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contrat cadre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_tails_sur_la_prestation__c</fullName>
        <label>Détails sur la prestation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Util__c</fullName>
        <description>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</description>
        <inlineHelpText>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</inlineHelpText>
        <label>Data Loader Util</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_de_Cr_ation_fiche_UI__c</fullName>
        <formula>DATE(VALUE(MID(date_crea_fiche_util__c,1,4)), VALUE(MID(date_crea_fiche_util__c,6,2)), VALUE(MID(date_crea_fiche_util__c,9,2)))</formula>
        <label>Date de Création de la fiche</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_d_but__c</fullName>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_mise__c</fullName>
        <label>Date de création fiche</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_de_r_f_rence_fiscale__c</fullName>
        <label>Date de référence fiscale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_relance__c</fullName>
        <label>Date de relance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_remerciement__c</fullName>
        <label>Date de remerciement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_rentr_e_cloture_2_mois__c</fullName>
        <formula>AND(
TODAY()&gt;=DATE(YEAR(CloseDate),MONTH(CloseDate)-2,DAY(CloseDate)),
TODAY()&lt;=CloseDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de rentrée / cloture - 2 mois</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_de_rentr_e_cloture_today__c</fullName>
        <formula>CloseDate&lt;=TODAY()</formula>
        <label>Date de rentrée / cloture &lt;= today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_de_s_lection_estim_e__c</fullName>
        <label>Date de sélection estimée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_soutenance_avec_le_client__c</fullName>
        <description>Définit date de soutenance avec le client</description>
        <label>Date de soutenance avec le client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_decision__c</fullName>
        <label>Date de décision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_du_don__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Date du don</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_formation__c</fullName>
        <description>Ce champ a été ajouté surtout pour le mapping &quot;ARPEGE&quot; (devis) et AGRESSO</description>
        <label>Date fin de formation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demande_inscription_newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demande inscription newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail_de_l_opportunite__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id ,&quot;Cliquer ici&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Détail de l&apos;opportunité</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_projet__c</fullName>
        <label>Détail du projet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diff_rentiel_montant__c</fullName>
        <formula>Amount - Montant_promesse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Différentiel montant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Domaine_d_tudes__c</fullName>
        <formula>TEXT(Contact_central__r.Domaine__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domaine d&apos;études</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Don_Anonyme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don Anonyme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibilit_de_l_ge__c</fullName>
        <label>Eligibilité de l&apos;âge</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibilit_du_domaine_d_tudes__c</fullName>
        <label>Eligibilité du domaine d&apos;études</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibilit_du_niveau_d_exp_rience_pro__c</fullName>
        <label>Eligibilité du niveau d&apos;expérience pro</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibilit_du_niveau_d_tudes__c</fullName>
        <label>Eligibilité du niveau d&apos;études</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibilite__c</fullName>
        <label>Eligibilité calculée</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExerciceNum_ro__c</fullName>
        <label>Exercice</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercice_Intra__c</fullName>
        <formula>IF(
 ExerciceNum_ro__c = &quot;2010&quot;,&quot;2010/2011&quot;,
IF(
ExerciceNum_ro__c = &quot;2011&quot;,&quot;2010/2011&quot;,
 IF(
 ExerciceNum_ro__c = &quot;2012&quot;,&quot;2011/2012&quot;,
 IF(
ExerciceNum_ro__c = &quot;2013&quot;,&quot;2012/2013&quot;,
 IF(
ExerciceNum_ro__c = &quot;2014&quot;,&quot;2013/2014&quot;,
 IF(
ExerciceNum_ro__c = &quot;2015&quot;,&quot;2014/2015&quot;,
 IF(
ExerciceNum_ro__c = &quot;2016&quot;,&quot;2015/2016&quot;,
 IF(
ExerciceNum_ro__c = &quot;2017&quot;,&quot;2016/2017&quot;,
 IF(
ExerciceNum_ro__c = &quot;2018&quot;,&quot;2017/2018&quot;,
 IF(
ExerciceNum_ro__c = &quot;2019&quot;,&quot;2018/2019&quot;,
 IF(
ExerciceNum_ro__c = &quot;2020&quot;,&quot;2019/2020&quot;,&quot;2020/2021&quot;
)))))))))))</formula>
        <label>Exercice EMLYON Intra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercice__c</fullName>
        <label>Exercice EMLYON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exercice_de_collecte__c</fullName>
        <label>Exercice de collecte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Famille__c</fullName>
        <label>Famille</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gamme__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accompagnement entreprises = RDV</fullName>
                </value>
                <value>
                    <fullName>Accompagnement pédagogique</fullName>
                </value>
                <value>
                    <fullName>Accord Cadre Formation Continue =</fullName>
                </value>
                <value>
                    <fullName>Annuaires</fullName>
                </value>
                <value>
                    <fullName>Atelier</fullName>
                </value>
                <value>
                    <fullName>Business Weeks</fullName>
                </value>
                <value>
                    <fullName>Careers Days</fullName>
                </value>
                <value>
                    <fullName>Célébration</fullName>
                </value>
                <value>
                    <fullName>Chaires Conjointes</fullName>
                </value>
                <value>
                    <fullName>Chaires d’enseignement et de recherche (&gt;1Me sur 4/5 ans)</fullName>
                </value>
                <value>
                    <fullName>Colloques</fullName>
                </value>
                <value>
                    <fullName>Conférence</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (notoriété)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (pédagogiques)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (type gd public)</fullName>
                </value>
                <value>
                    <fullName>Conférences non payantes (type scientifique)</fullName>
                </value>
                <value>
                    <fullName>Conférences payantes (par l&apos;auditeur, participant)</fullName>
                </value>
                <value>
                    <fullName>Conférences payantes (par l&apos;intervenant-casHEC)</fullName>
                </value>
                <value>
                    <fullName>Conseil institutionnel =</fullName>
                </value>
                <value>
                    <fullName>Corporate Discovery Session</fullName>
                </value>
                <value>
                    <fullName>Dons Fondation =&gt; individu ou entreprise (idem EMLYON)</fullName>
                </value>
                <value>
                    <fullName>Enquêtes et Stats</fullName>
                </value>
                <value>
                    <fullName>Entretien individuel</fullName>
                </value>
                <value>
                    <fullName>Evènements corporate payants organisés par la comm</fullName>
                </value>
                <value>
                    <fullName>Evenements EMLYON.</fullName>
                </value>
                <value>
                    <fullName>Evenements EMLYON. (A voir avec BB)</fullName>
                </value>
                <value>
                    <fullName>Evenements EMLYON (à positionner confer supra - voir Bernard)</fullName>
                </value>
                <value>
                    <fullName>Evenements FOREVER co-organisés</fullName>
                </value>
                <value>
                    <fullName>Evènements FOREVER organisés par EMLYON FOREVER</fullName>
                </value>
                <value>
                    <fullName>Expert Panels OU Table rondes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Format_contrat__c</fullName>
        <label>Format contrat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>OPP-FCT10</fullName>
                </value>
                <value>
                    <fullName>OPP-FCT20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormuleInterfaceIDLogin__c</fullName>
        <formula>MID( InterfaceExternalId__c , 
8, 
LEN(InterfaceExternalId__c ) -6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormuleInterfaceIDLogin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formule_nb_oppo_cours__c</fullName>
        <formula>Contact_central__r.Nombre_opportunites_sur_criteres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre d&apos;opportunités en cours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formule_nb_oppo_total__c</fullName>
        <formula>Contact_central__r.Nombre_opportunit_s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre d&apos;opportunités total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gamme__c</fullName>
        <label>Gamme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCOMP. CARRIERE ou CARRIERE RESEAUX</fullName>
                </value>
                <value>
                    <fullName>AUTRES OFFRES ?</fullName>
                </value>
                <value>
                    <fullName>AUTRES PROGRAMMES</fullName>
                </value>
                <value>
                    <fullName>AUTRES SERVICES</fullName>
                </value>
                <value>
                    <fullName>EVENEMENTS DE RECRUTEMENT</fullName>
                </value>
                <value>
                    <fullName>EVENEMENTS EXPERTS</fullName>
                </value>
                <value>
                    <fullName>EVENEMENTS IMAGE / RESEAU</fullName>
                </value>
                <value>
                    <fullName>EVENEMENTS PROMOTIONNELS</fullName>
                </value>
                <value>
                    <fullName>INFORMER (par différents canaux)</fullName>
                </value>
                <value>
                    <fullName>MECENAT (CENTRALE LYON - EMLYON)</fullName>
                </value>
                <value>
                    <fullName>MECENAT EMLYON</fullName>
                </value>
                <value>
                    <fullName>MECENAT FONDATION EMLYON</fullName>
                </value>
                <value>
                    <fullName>MESURER LA QUALITE ET LA PERFORMANCE</fullName>
                </value>
                <value>
                    <fullName>OFFRES EXECUTIVE DEVELOPMENT hors MBA</fullName>
                </value>
                <value>
                    <fullName>PROGRAMMES BACHELOR</fullName>
                </value>
                <value>
                    <fullName>PROGRAMMES ENTREPRENEURS</fullName>
                </value>
                <value>
                    <fullName>PROGRAMMES MASTER</fullName>
                </value>
                <value>
                    <fullName>PROGRAMMES MASTERES</fullName>
                </value>
                <value>
                    <fullName>PROGRAMMES MBA</fullName>
                </value>
                <value>
                    <fullName>SPONSORING</fullName>
                </value>
                <value>
                    <fullName>TAXE D&apos;APPRENTISSAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicateur_Montant__c</fullName>
        <formula>IF(
 Amount &lt;&gt;  Somme_Montant_Ech_ancier__c ,
Image(&quot;/resource/information&quot;,&quot;Image indisponible&quot;,18,18)
, &quot;&quot;)</formula>
        <inlineHelpText>Si le montant est différent de la somme des montants de l&apos;échéanciers, le panneau s&apos;affiche.</inlineHelpText>
        <label>Indicateur Montant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_session__c</fullName>
        <description>Utilisé pour les devis</description>
        <label>Information session</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceExternalId__c</fullName>
        <externalId>true</externalId>
        <label>InterfaceExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Jour_date_de_rentr_e_cloture__c</fullName>
        <formula>RIGHT(TEXT(CloseDate),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jour date de rentrée / cloture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Libelle_Groupe__c</fullName>
        <description>Libellé du Groupe</description>
        <formula>Account.Libell_du_groupe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Groupe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu_de_formation__c</fullName>
        <description>Valeur affichée dans le devis</description>
        <label>Lieu de formation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liste_des_participants__c</fullName>
        <label>Liste des participants</label>
        <length>10255</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Localisation__c</fullName>
        <label>Localisation </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ecully</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Casa</fullName>
                </value>
                <value>
                    <fullName>Sur site de l’entreprise</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marge_Previsionnelle__c</fullName>
        <inlineHelpText>Non calculée automatiquement. A renseigner.</inlineHelpText>
        <label>Marge Prévisionnelle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>